--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://your-sfdc-domain.lightning.force.com/lightning/lightning.out.js"></script>
 </head>
 <body>
-  <h1>Usando Lightning Out</h1>
+  <h1>Using Lightning Out</h1>
 
   <div id="lightning-container"></div>
 
