--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Lightning Out Test</title>
-  <script src="https://your-sfdc-domain.lightning.force.com/lightning/lightning.out.js"></script>
+  <script src="https://bitforce2-dev-ed.develop.lightning.force.com/lightning/lightning.out.js"></script>
 </head>
 <body>
-  <h1>Using Lightning Out</h1>
+  <h1>Usando Lightning Out</h1>
 
   <div id="lightning-container"></div>
 
