--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <script>
       async function initLightningOut() {
         const response = await fetch(
-          "https://wanted-pug-properly.ngrok-free.app/auth/salesforce",
+          "https:// https://wanted-pug-properly.ngrok-free.app/auth/salesforce",
           {
             method: "GET",
             headers: {
               Accept: "application/json",
               "Content-Type": "application/json",
+              "ngrok-skip-browser-warning": "69420",
             },
           }
         );
