--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           "c:ContactFormApp",
           () => {
             $Lightning.createComponent(
-              "c:contactForm",
+              "c:ContactForm",
               {},
               "lightning-container",
               (cmp) => {
