--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Lightning Out Test</title>
-    <script src="https://bitforce2-dev-ed.develop.lightning.force.com/lightning/lightning.out.js"></script>
+    <script src="https://bitforce2-dev-ed.develop.my.salesforce.com/lightning/lightning.out.js"></script>
   </head>
   <body>
     <h1>Usando Lightning Out</h1>
