--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           "c:ContactFormApp",
           () => {
             $Lightning.createComponent(
-              "c:ContactForm",
+              "c:newContactForm",
               {},
               "lightning-container",
               (cmp) => {
